blog-src/public/css/style.css
/* ... */
/*==================================================
	Menu
==================================================*/
.top-nav{
	position:fixed;
	top:0;
	left:0;
	width:100%;
	z-index:99;
	border:none;
}
.top-nav > .container{
	position:relative;
}
.menu-btn{
	position:absolute;
	top:17px;
	right:-17px;
	padding:22px 17px;
	z-index:99;
	outline:none !important;
}
.show-menu .menu-btn{
	box-shadow:none;
}
.menu-btn > .lines{
	width:33px;
	height:23px;
	display:block;
	position:relative;
}
.menu-btn > .lines > span{
	height:3px;
	background:#202020;
	width:100%;
	display:block;
	position:absolute;
	left:0;
	transition:all .3s ease;
}
.white-btn .lines > span{
	background:#FFF;
}
.menu-btn .l1{
	top:0;
}
.menu-btn .l2{
	top:10px;
}
.menu-btn .l3{
	top:20px;
}
.menu-btn{
	transition:all .3s ease;
}
body.show-menu .menu-btn{
	transform:rotate(-180deg);
}
body.show-menu .menu-btn > .lines > *{
	background:#202020;
}
body.show-menu .menu-btn .l2{
	opacity:0;
}
body.show-menu .menu-btn .l1,
body.show-menu .menu-btn .l3{
	top:10px;
}
body.show-menu .menu-btn .l1{
	transform:rotate(-45deg);
}
body.show-menu .menu-btn .l3{
	transform:rotate(45deg);
}
.menu{
	position:absolute;
	top:15px;
	right:-20px;
	background:transparent;
	width:280px;
	z-index:98;
	border-radius:4px;
	overflow:hidden;
	transition:box-shadow .3s ease, visibility 0s .6s ease;
	visibility:hidden;
}
.menu:after{
	content: ' ';
	position:absolute;
	top:-600px;
	right:-600px;
	height:1200px;
	width:1200px;
	transform:scale(0);
	transition:transform .6s ease, opacity .3s .3s ease;
	border-radius:50%;
	background:#FFF;
	z-index:-1;
	opacity:0;
}
.show-menu .menu:after{
	transform:scale(1);
	transition:transform .6s ease, opacity .6s ease;
	opacity:1;
}
.show-menu .menu{
	transition:box-shadow .6s .3s ease;
	box-shadow: 0 0 30px 0 rgba(0,0,0,.2);
	visibility:visible;
}
.menu > ul{
	list-style:none;
	padding:10px 0;
	margin:0 1px;
	max-height:80vh;
	overflow-y:auto;
}
.menu > ul::-webkit-scrollbar{
	background:#FFF;
	height:8px;
	width:8px;
}
.menu > ul::-webkit-scrollbar-thumb{
	border-radius:5px;
	background:#C0C0C0;
	border:solid 2px #FFF;
}
.menu > ul::-webkit-scrollbar-thumb:hover{
	background:#404040;
}
.menu li > a{
	display:block;
	font-size:14px;
	color:#808080;
	padding:12px 25px;
	text-decoration:none;
	transition:all .3s ease;
	margin-bottom:7px;
	font-weight:500;
	outline:none !important;
}
.menu li:last-of-type > a{
	margin-bottom:0;
}
.menu li > a:hover{
	background:rgba(0,0,0,.04);
	color:#202020;
}
.menu > ul > li{
	transform:translateY(-15px);
	opacity:0;
	visibility:hidden;
	transition:all .3s ease;
}
.show-menu .menu > ul > li{
	transform:translateY(0);
	opacity:1;
	visibility:visible;
}
.show-menu .menu li:nth-of-type(1){
	transition-delay:.1s;
}
.show-menu .menu li:nth-of-type(2){
	transition-delay:.2s;
}
.show-menu .menu li:nth-of-type(3){
	transition-delay:.3s;
}
.show-menu .menu li:nth-of-type(4){
	transition-delay:.4s;
}
.show-menu .menu li:nth-of-type(5){
	transition-delay:.5s;
}
.show-menu .menu li:nth-of-type(6){
	transition-delay:.6s;
}
.show-menu .menu li:nth-of-type(7){
	transition-delay:.7s;
}
.show-menu .menu li:nth-of-type(8){
	transition-delay:.8s;
}



/*==================================================
	Main Section
==================================================*/
.main-section{
	padding-top:120px;
	padding-bottom:100px;
	background:#3F51B5;
	box-shadow:0 0 40px 0 rgba(0,0,0,.45);
}
.person-img{
	width:220px;
	height:220px;
	display:block;
	border-radius:50%;
	overflow:hidden;
	margin-bottom:55px;
	box-shadow: 0 0 25px 0 rgba(0,0,0,.15);
}
.intro-name{
	color:#FFF;
	font-size:68px;
	font-weight:300;
	margin:0;
	line-height:1em;
	letter-spacing:2px;
}
.intro-info{
	font-size:20px;
	margin-top:10px;
	margin-bottom:0;
	display:inline-block;
	position:relative;
	z-index:3;
	color:rgba(255,255,255,.6);
	font-weight:300;
}


/*==================================================
	About Section
==================================================*/
.about-text > p{
	margin-top:0;
	margin-bottom:15px;
	color:rgba(0,0,0,.6);
	font-size:14px;
	line-height:1.8em;
}
.about-text > .large{
	font-size:44px;
	margin-bottom:20px;
	color:rgba(0,0,0,.8);
}
.social-links{
	list-style:none;
	margin:0;
	padding:0;
	font-size:0;
}
.social-links > li{
	display:inline-block;
	margin-top:25px;
}
.social-links > li > a{
	display:block;
	text-transform:uppercase;
	font-size:14px;
	letter-spacing:3px;
	font-weight:600;
	margin-right:25px;
	color:rgba(0,0,0,.6);
	text-decoration:none;
}
.social-links > li > a:hover{
	color:#202020;
}


/*==================================================
	Funfacts Section
==================================================*/
.funfact > strong{
	display:block;
	font-size:66px;
	font-weight:600;
	line-height:1em;
	margin-bottom:4px;
}
.funfact > span{
	letter-spacing:2px;
	font-size:14px;
	color:rgba(0,0,0,.6);
}


/*==================================================
	Services Section
==================================================*/
.service{
	margin-bottom:40px;
}
.service > i{
	font-size:68px;
	line-height:1em;
}
.service > h4{
	margin-top:10px;
	font-size:18px;
	text-transform:uppercase;
	font-weight:700;
	letter-spacing:2px;
}
.service > p{
	margin-top:15px;
	margin-bottom:0;
	color:rgba(0,0,0,.6);
	line-height:1.8em;
}
.skill{
	position:relative;
	margin-bottom:30px;
}
.skill:last-of-type{
	margin-bottom:0;
}
.skill > .percent,
.skill > h4{
	text-transform:uppercase;
	letter-spacing:2px;
	font-weight:600;
	font-size:12px;
	margin-top:0;
	margin-bottom:8px;
}
.skill > .percent{
	position:absolute;
	top:0;
	right:0;
}
.skill-bar{
	padding:2px;
	border:solid 1px rgba(0,0,0,.2);
}
.skill-bar > div{
	background:#202020;
	height:5px;
}
/* ... */

